# agents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.local.yml  docker-compose.yml
config/: target_allocation.yaml
docs/: vector-db-agents-guide.md
ipo-watch/: __init__.py  alerts.py  new_ipo_template.json  profiles.py  scheduler_integration.py  signals.py
orchestrator/: agent.py  alert_manager.py  approval_manager.py  contracts.py  earnings_agent.py  indicators.py  journal_agent.py  managed_agents.py  mtf_agent.py  portfolio_optimizer.py  risk_agent.py  router.py  scheduler.py  session_orchestrator.py  signal_scorer.py  vector_store.py  watchlist_monitor.py
scripts/: register_agents.py  seed_test_trades.py  set-api-key.sh  setup_vector_db.py
stock-analysis-agent/: .env.example  .gitignore  Dockerfile  pyproject.toml
stock-analysis-agent/src/stock_agent/: agent.py  alpaca_tools.py  api.py  main.py  memory.py  reflection.py  research.py  schwab_tools.py  tools.py  trading_agent.py  watchlist.py
stock-analysis-agent/tests/: conftest.py
stock-analysis-agent/tests/functional/: test_api.py  test_risk_sequence.py  test_scan_endpoints.py  test_watchlist_monitor.py
stock-analysis-agent/tests/integration/: test_trading_flow.py
stock-analysis-agent/tests/unit/: test_alert_manager.py  test_earnings_agent.py  test_journal_agent.py  test_memory.py  test_mtf_agent.py  test_portfolio_optimizer.py  test_risk_agent.py  test_scheduler.py  test_signal_scorer.py  test_tools.py  test_watchlist.py
stock-copilot-agent/: .gitignore  (+9 more)
(+41 files in other folders)
