[project]
name = "stock-analysis-agent"
version = "0.1.0"
description = "Stock analysis agent powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.50",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tabulate>=0.9.0",
    "alpaca-py>=0.20.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
analyze = "stock_agent.main:main"
